# docs/swagger.json
@@ -16,7 +16,6 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get list of expenses",
                 "consumes": [
                     "application/json"
                 ],
@@ -24,9 +23,56 @@
                     "application/json"
                 ],
                 "tags": [
-                    "expenses"
+                    "Expenses"
+                ]
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
                 ],
-                "summary": "Show a list of expenses"
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Expenses"
+                ]
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Expenses"
+                ]
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Expenses"
+                ]
             }
         },
         "/expenses/full": {
@@ -43,19 +89,96 @@
                     "application/json"
                 ],
                 "tags": [
-                    "expenses"
-                ],
-                "summary": "Show a list of expenses with full details"
+                    "Expenses"
+                ]
             }
         },
-        "/labels": {
+        "/groups": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get list of labels",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Groups"
+                ]
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Groups"
+                ]
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Groups"
+                ]
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Groups"
+                ]
+            }
+        },
+        "/groups/full": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Groups"
+                ]
+            }
+        },
+        "/labels": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -65,7 +188,6 @@
                 "tags": [
                     "Labels"
                 ],
-                "summary": "Show a list of labels",
                 "responses": {
                     "200": {
                         "description": "ok",
@@ -74,6 +196,39 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Labels"
+                ]
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Labels"
+                ]
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Labels"
+                ]
             }
         },
         "/labels/full": {
@@ -86,8 +241,7 @@
                 ],
                 "tags": [
                     "Labels"
-                ],
-                "summary": "Show a list of labels with full details"
+                ]
             }
         },
         "/users": {
